Fix deprecated call to Long()